@@ -1,5 +1,5 @@
 /**********************************************************************
- * $Id: mitab_tabfile.cpp,v 1.57 2005-10-04 15:44:31 dmorissette Exp $
+ * $Id: mitab_tabfile.cpp,v 1.58 2005-10-13 20:12:03 fwarmerdam Exp $
  *
  * Name:     mitab_tabfile.cpp
  * Project:  MapInfo TAB Read/Write library
@@ -32,7 +32,12 @@
  **********************************************************************
  *
  * $Log: mitab_tabfile.cpp,v $
- * Revision 1.57  2005-10-04 15:44:31  dmorissette
+ * Revision 1.58  2005-10-13 20:12:03  fwarmerdam
+ * layers with just regions can't be set as type wkbPolygon because they may
+ * have multipolygons (bug GDAL:958)
+ *     http://bugzilla.remotesensing.org/show_bug.cgi?id=958
+ *
+ * Revision 1.57  2005/10/04 15:44:31  dmorissette
  * First round of support for Collection objects. Currently supports reading
  * from .TAB/.MAP and writing to .MIF. Still lacks symbol support and write
  * support. (Based in part on patch and docs from Jim Hope, bug 1126)
@@ -513,8 +518,6 @@ int TABFile::Open(const char *pszFname, const char *pszAccess,
             m_poDefn->SetGeomType( wkbPoint );
         else if( numPoints == 0 && numLines > 0 && numRegions == 0 )
             m_poDefn->SetGeomType( wkbLineString );
-        else if( numPoints == 0 && numLines == 0 && numRegions > 0 )
-            m_poDefn->SetGeomType( wkbPolygon );
         else
             /* we leave it unknown indicating a mixture */;
     }
